# JapiBase

./: .gitignore  Context Japi  LICENSE  Planning Japi  README.md  context.md
Japi Base Pico 2/: CMakeLists.txt  demo.c  font_8x12.h  hw_config.c  japi_base.c  japi_base.h  japi_base.pio  japi_kbd_defaults.h  main.c  my_debug.h  starry_image.h  third_party_libs.c  third_party_libs.h
hardware/: Japi_Base-RevA-BOM-SMD.csv  Japi_Base-RevA-CPL-SMD.csv  README.md
sim/: Makefile  japi_sim.c  seam_app  sim_demo  sim_demo.c
sim/shim/: ff.h  lfs.h
